replace other useless guava with java stuff